# orbit

./: .gitmodules  CMakeLists.txt  readme.md
orbit/: CMakeLists.txt
orbit/include/: linked_list.h  planet.h  structs.h
orbit/include/utils/: vector_utils.h
orbit/src/: linked_list.c  main.c  planet.c
